--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "This is a website for the Five Points Bakery in Buffalo, NY",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run watch:all",
     "lite": "lite-server",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "scss": "node-sass -o css/ css/",
     "watch:scss": "onchange 'css/*.scss' -- npm run scss",
-    "watch:all": "parallelshell 'npm run watch:scss' 'npm run lite'"
+    "watch:all": "parallelshell 'npm run watch:scss' 'npm run lite'",
+    "start": "npm run watch:all",
+    "copyfonts": "copyfiles -f node_modules/font-awesome/fonts/* dist/fonts",
+    "imagemin": "imagemin img/* -o dist/img",
+    "clean": "rimraf dist",
+    "build": "npm run clean && npm run imagemin && npm run copyfonts && npm run usemin",
+    "usemin": "usemin contact.html -d dist --htmlmin -o dist/contact.html && usemin about.html -d dist --htmlmin -o dist/about.html && usemin index.html -d dist --htmlmin -o dist/index.html && usemin event_space.html -d dist --htmlmin -o dist/event_space.html && usemin menu.html -d dist --htmlmin -o dist/menu.html"
   },
   "repository": {
     "type": "git"
@@ -17,9 +23,14 @@
   "license": "ISC",
   "homepage": "https://mcdevittbass.github.io/FivePointsBakery",
   "devDependencies": {
+    "copyfiles": "^2.0.0",
+    "imagemin-cli": "^3.0.0",
     "lite-server": "^2.3.0",
+    "node-sass": "^4.12.0",
     "onchange": "^3.3.0",
-    "parallelshell": "^3.0.1"
+    "parallelshell": "^3.0.1",
+    "rimraf": "^2.6.2",
+    "usemin-cli": "^0.5.1"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.1",
